feat: ioc-v1.4.0.1 添加yaml支持

--- a/Examples/Test/qml.qrc
+++ b/Examples/Test/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>myspring.xml</file>
         <file>xmltest2.xml</file>
+        <file>ioc.yml</file>
     </qresource>
 </RCC>
