feat: ioc-v1.4.0.6 增加自定义析构的接口。boot-v1.3.0.3 解决Requestor重复析构问题

--- a/Examples/Test/qml.qrc
+++ b/Examples/Test/qml.qrc
@@ -4,5 +4,6 @@
         <file>myspring.xml</file>
         <file>xmltest2.xml</file>
         <file>ioc.yml</file>
+        <file>ioc2.yml</file>
     </qresource>
 </RCC>
