--- a/McQuickBoot/qrc/resource.qrc
+++ b/McQuickBoot/qrc/resource.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>requestor.js.inl</file>
+        <file>requestor.mjs</file>
     </qresource>
 </RCC>
